# minRSA

./: CMakeLists.txt
include/: bignum.h  minRSA.h  util.h
source/: bignum.c  main.c  util.c
